# ModelHub

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  modelhub_windows_prd.md  package.json  pnpm-lock.yaml  task.md
scripts/: sign-windows-preview.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: sign-windows-preview.ps1
src-tauri/src/: commands.rs  downloads.rs  errors.rs  lib.rs  main.rs  model_actions.rs  models.rs  paths.rs  settings.rs  system_info.rs  tray.rs
src-tauri/src/hf/: api.rs  cache_writer.rs  mod.rs
src-tauri/src/runtimes/: mod.rs  ollama.rs
src-tauri/src/scanner/: common.rs  huggingface.rs  lmstudio.rs  metadata.rs  mod.rs  ollama.rs
src/api/: tauri.ts  types.ts
src/components/: AppShell.tsx  EmptyState.tsx  ModelCard.tsx  Sidebar.tsx  SwitchField.tsx
src/pages/: DownloadsPage.tsx  ExplorePage.tsx  LocalPage.tsx  RuntimesPage.tsx  SettingsPage.tsx
src/styles/: globals.css
src/utils/: format.ts
tests/fixtures/hf_cache_sample/models--Qwen--Qwen3-4B/snapshots/abc123/: Qwen3-4B-Q4_K_M.gguf  config.json
tests/fixtures/lmstudio_sample/empty-publisher/NoGgufModel/: config.json
tests/fixtures/lmstudio_sample/lmstudio-community/Qwen3-4B-GGUF/: Qwen3-4B-Q4_K_M.gguf  Qwen3-4B-Q8_0.gguf  README.txt
tests/fixtures/lmstudio_sample/mistralai/Mistral-Nemo-Instruct/: Mistral-Nemo-Instruct-IQ4_XS.gguf  README.txt
